# virtual_microphone

client/: Cargo.toml
client/src/: main.rs
host/: Cargo.toml  foo
host/src/: main.rs
