[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.80"
ringbuf = "0.3.3"
local-ip-address = "0.6.1"
pnet = "0.34.0"
